--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/client": "^6.12.0",
     "axios": "^1.10.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "node-cron": "^4.2.1",
